# CRM-AVIA-BACKEND

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  PYTHONANYWHERE.md  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  auth_urls.py  auth_views.py  authentication.py  models.py  permissions.py  permissions_catalog.py  serializers.py  tokens.py  urls.py  views.py
aftersales/: models.py  urls.py  views.py
avia/: models.py
booking/: job_handlers.py  models.py  preflight.py  urls.py  views.py
calendar_app/: models.py  urls.py  views.py
common/: admin.py  apps.py  audit.py  demo_workspace.py  errors.py  fields.py  idempotency.py  jobs.py  locking.py  logging.py  maintenance.py  meta_views.py  middleware.py  models.py  money.py  outbox.py  outbox_processors.py  pagination.py  scheduled.py  schema.py  urls.py  views.py
communications/: models.py  urls.py  views.py
config/: api_urls.py  urls.py  wsgi_pythonanywhere.py
crm/: models.py  serializers.py  urls.py  views.py
documents/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
finance/: models.py  services.py  urls.py  views.py
groups_app/: models.py  roster.py  urls.py  views.py
hotels/: models.py
integrations/: adapters.py  models.py  urls.py  views.py
notifications/: models.py  outbox_handlers.py  urls.py  views.py
offers/: models.py  pdf.py  urls.py  views.py
orders/: card_views.py  job_handlers.py  models.py  participant_views.py  selectors.py  serializers.py  services.py  task_views.py  urls.py  (+1 more)
(+87 files in other folders)
