[project]
name = "travelhub-backend"
version = "0.1.0"
description = "Travel Hub CRM backend — Django REST API"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt[crypto]>=5.4",
    "django-filter>=24.3",
    "drf-spectacular>=0.28",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
    "django-environ>=0.11",
    "cryptography>=43.0",
    "pyotp>=2.9",
    "openpyxl>=3.1",
    "gunicorn>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "DJ"]
ignore = ["E501", "DJ008", "DJ012"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["I001"]
